# obs-template-match-beep

./: .clang-format  .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/scripts/: .Aptfile  .Brewfile  .build.zsh  .package.zsh  Build-Windows.ps1
.github/scripts/utils.pwsh/: Expand-ArchiveExt.ps1  Setup-Host.ps1  Setup-OpenCV.ps1
.github/scripts/utils.zsh/: setup_opencv
.github/workflows/: main.yml
cmake/: ObsPluginHelpers.cmake
cmake/bundle/windows/: installer-Windows.iss.in
src/: CustomBeepSettings.cpp  CustomBeepSettings.h  FrameIngest.cpp  audio.cpp  audio.h  template-match-beep.cpp  template-match-beep.h.in
